--- a/src/main/resources/templates/main-page.html
+++ b/src/main/resources/templates/main-page.html
@@ -2,82 +2,124 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <title>Main Page</title>
+    <!-- Add Bootstrap CSS here -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 </head>
 <body>
-<div style="display: flex">
-    <a th:if="${user.email == null}" th:href="@{/login}">
-        <button type="submit">Log in</button>
-    </a>
-    <form th:if="${user.email != null}" th:action="@{/logout}" method="post">
-        <button type="submit">Log out</button>
-    </form>
-    <p th:if="${user.email != null}">Current User:
-        <a th:href="@{'/user/' + ${user.id}}">
-            <span th:text="${user.name + ' ' + user.surname}"></span>
-        </a>
-    </p>
-    <a th:if="${user.isAdmin()}" th:href="@{/admin}">
-        <button type="submit">Admin Panel</button>
-    </a>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" th:href="@{/}">Bulletin Board</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" id="announcementsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Announcements</a>
+                <div class="dropdown-menu" aria-labelledby="announcementsDropdown">
+                    <a class="dropdown-item" th:href="@{'/filter/Work Offer'}">Work Offers</a>
+                    <a class="dropdown-item" th:href="@{'/filter/Work Search'}">Work Searches</a>
+                    <a class="dropdown-item" th:href="@{'/filter/Purchase'}">Purchases</a>
+                    <a class="dropdown-item" th:href="@{'/filter/Sale'}">Sales</a>
+                    <a class="dropdown-item" th:href="@{/add}">Add Announcement</a>
+                </div>
+            </li>
+            <li class="nav-item" th:if="${user.isAdmin()}">
+                <a class="nav-link" th:href="@{/admin}">Admin Panel</a>
+            </li>
+        </ul>
+        <span class="navbar-text mr-3" th:if="${user.email != null}">
+            Logged in as: <a th:href="@{'/user/' + ${user.id}}" th:text="${user.name + ' ' + user.surname}"></a>
+        </span>
+        <a th:if="${user.email == null}" th:href="@{/login}" class="btn btn-outline-primary ml-2">Log in</a>
+        <!-- Log out with confirmation modal trigger -->
+        <button type="button" class="btn btn-outline-danger ml-2" th:if="${user.email != null}" data-toggle="modal" data-target="#confirmLogoutModal">Log out</button>
+    </div>
+</nav>
+
+<!-- Log out confirmation modal -->
+<div class="modal fade" id="confirmLogoutModal" tabindex="-1" role="dialog" aria-labelledby="confirmLogoutModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="confirmLogoutModalLabel">Confirm Logout</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to log out?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <form th:action="@{/logout}" method="post" class="d-inline">
+                    <button type="submit" class="btn btn-danger">Log out</button>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
-<form th:action="@{/}">
-    <label for="title">Search by Title:</label>
-    <input type="text" id="title" name="title" th:value="${title}"/>
-    <button type="submit">Search</button>
-</form>
-<div style="display: flex">
-    <form th:action="@{'/filter/Work Offer'}" method="get">
-        <button type="submit">Filter Work Offers</button>
-    </form>
-    <form th:action="@{'/filter/Work Search'}" method="get">
-        <button type="submit">Filter Work Searches</button>
-    </form>
-    <form th:action="@{'/filter/Purchase'}" method="get">
-        <button type="submit">Filter Purchases</button>
-    </form>
-    <form th:action="@{'/filter/Sale'}" method="get">
-        <button type="submit">Filter Sales</button>
-    </form>
-    <form th:action="@{/}" method="get">
-        <label for="sort">Sort by:</label>
-        <select id="sort" name="sort">
-            <option value="priceAscending">Price: Low to High</option>
-            <option value="priceDescending">Price: High to Low</option>
-            <option value="dateAscending">Date: Old to New</option>
-            <option value="dateDescending">Date: New to Old</option>
-        </select>
-        <button type="submit">Sort</button>
-    </form>
-</div>
-<table>
-    <thead>
-    <tr th:if="${#lists.isEmpty(announcements)}">
-        <th>No announcements available</th>
-    </tr>
-    <tr th:unless="${#lists.isEmpty(announcements)}">
-        <th>Title</th>
-        <th>Category</th>
-        <th>City</th>
-        <th>Description</th>
-        <th>Actions</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="announcement : ${announcements}">
-        <td th:text="${announcement.title}"></td>
-        <td th:text="${announcement.category}"></td>
-        <td th:text="${announcement.city}"></td>
-        <td th:text="${announcement.description}"></td>
-        <td>
-            <form th:action="@{'/details/' + ${announcement.id}}" method="get">
-                <button type="submit">Details</button>
+
+<div class="container-fluid">
+    <div class="row my-3">
+        <div class="col-md-6">
+            <form th:action="@{/}" class="form-inline">
+                <label for="title" class="mr-2">Search by Title:</label>
+                <input type="text" id="title" name="title" class="form-control mr-2" th:value="${title}" placeholder="Enter title"/>
+                <button type="submit" class="btn btn-primary">Search</button>
             </form>
-        </td>
-    </tr>
-    </tbody>
-</table>
-<a th:href="@{/add}">
-    <button type="submit">Add Announcement</button>
-</a>
+        </div>
+        <div class="col-md-6">
+            <form th:action="@{/}" method="get" class="form-inline float-md-right">
+                <label for="sort" class="mr-2">Sort by:</label>
+                <select id="sort" name="sort" class="form-control mr-2">
+                    <option value="priceAscending">Price: Low to High</option>
+                    <option value="priceDescending">Price: High to Low</option>
+                    <option value="dateAscending">Date: Old to New</option>
+                    <option value="dateDescending">Date: New to Old</option>
+                </select>
+                <button type="submit" class="btn btn-primary">Sort</button>
+            </form>
+        </div>
+    </div>
+
+    <div class="row">
+        <div th:if="${#lists.isEmpty(announcements)}" class="col-12">
+            <p>No announcements available</p>
+        </div>
+
+        <div th:each="announcement : ${announcements}" class="col-md-3 mb-4">
+            <div class="card" style="width: 100%;">
+                <img class="card-img-top"
+                     th:if="${announcement.previewImageId != null}"
+                     th:src="@{'/images/{id}'(id=${announcement.previewImageId})}"
+                     alt="Announcement Image" style="max-height: 180px; object-fit: contain;">
+                <img class="card-img-top"
+                     th:if="${announcement.previewImageId == null}"
+                     th:src="@{/photos/defaultPreviewImage.jpg}"
+                     alt="Default Announcement Image" style="max-height: 180px; object-fit: contain;">
+                <div class="card-body">
+                    <h5 class="card-title" th:text="${announcement.title}"></h5>
+                    <p class="card-text" th:text="${announcement.description}"></p>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item" th:text="'Price: ' + ${announcement.price} + ' ' + ${announcement.currency}"></li>
+                    <li class="list-group-item">
+                        <a th:href="@{'/user/' + ${announcement.user.id}}" th:text="${announcement.user.name + ' ' + announcement.user.surname}" style="text-decoration: none;"></a>
+                    </li>
+                    <li class="list-group-item" th:text="'Posted on: ' + ${#temporals.format(announcement.creationDate, 'dd.MM.yyyy HH:mm')}"></li>
+                </ul>
+                <div class="card-body">
+                    <a th:href="@{'/details/' + ${announcement.id}}" class="btn btn-primary">See more</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Add Bootstrap JS and dependencies here -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 </body>
 </html>
