--- a/src/main/resources/templates/login-page.html
+++ b/src/main/resources/templates/login-page.html
@@ -2,23 +2,41 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <title>Login Page</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 </head>
 <body>
-<h4>Login</h4>
-<form th:action="@{/login}" method="post">
-    <label for="email">Email:</label>
-    <input id="email" type="email" name="username" required><br><br>
+<div class="container mt-5">
+    <h4 class="mb-4">Login</h4>
+    <form th:action="@{/login}" method="post">
+        <div class="form-group row">
+            <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
+            <div class="col-sm-10">
+                <input type="email" class="form-control" id="inputEmail" name="username" placeholder="Email" required>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
+            <div class="col-sm-10">
+                <input type="password" class="form-control" id="inputPassword" name="password" placeholder="Password" required>
+            </div>
+        </div>
+        <div class="form-group row">
+            <div class="col-sm-10 offset-sm-2">
+                <button type="submit" class="btn btn-primary">Log in</button>
+            </div>
+        </div>
+    </form>
 
-    <label for="password">Password:</label>
-    <input id="password" type="text" name="password" required><br><br>
+    <div class="form-group row">
+        <div class="col-sm-10 offset-sm-2">
+            <a th:href="@{/registration}" class="btn btn-secondary mr-2">Registration</a>
+            <a th:href="@{/}" class="btn btn-outline-secondary">Back To Main Page</a>
+        </div>
+    </div>
+</div>
 
-    <button type="submit">Log in</button>
-</form>
-<a th:href="@{/registration}">
-    <button type="submit">Registration</button><br>
-</a>
-<a th:href="@{/}">
-    <button type="submit">Back To Main Page</button>
-</a>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 </body>
 </html>
