--- a/src/main/resources/templates/registration-page.html
+++ b/src/main/resources/templates/registration-page.html
@@ -3,6 +3,7 @@
 <head>
     <title>Registration Page</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <body>
 <div class="container mt-5">
@@ -29,8 +30,14 @@
             </div>
         </div>
 
-        <!-- Error Message Display -->
-        <p th:if="${errorMessage}" th:text="${errorMessage}" class="text-danger"></p>
+        <div class="d-flex justify-content-center mb-3">
+            <div class="g-recaptcha" th:attr="data-sitekey=${@reCaptchaConfiguration.getSiteKey()}"></div>
+        </div>
+
+        <div class="text-center">
+            <p th:if="${captchaError}" th:text="${captchaError}" class="text-danger"></p>
+            <p th:if="${errorMessage}" th:text="${errorMessage}" class="text-danger"></p>
+        </div>
 
         <button type="submit" class="btn btn-primary">Register</button>
         <a th:href="@{/}" class="btn btn-secondary ml-2">Back To Main Page</a>
