--- a/src/main/resources/templates/announcement-edit.html
+++ b/src/main/resources/templates/announcement-edit.html
@@ -4,6 +4,8 @@
     <title>Edit Announcement</title>
     <!-- Include Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <meta name="_csrf" th:content="${_csrf.token}"/>
+    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
 </head>
 <body>
 
@@ -60,12 +62,48 @@
     </div>
 </div>
 
+<!-- Confirm Delete Image Modal -->
+<div class="modal fade" id="confirmDeleteImageModal" tabindex="-1" role="dialog" aria-labelledby="confirmDeleteImageModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="confirmDeleteImageModalLabel">Confirm Delete</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this image?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" onclick="deleteImage()">Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="container mt-4">
     <h2>Edit Announcement</h2>
     <form th:action="@{'/' + ${announcement.id} + '/edit'}" method="post" enctype="multipart/form-data">
         <div class="form-group">
             <label for="title">Title:</label>
             <input type="text" class="form-control" id="title" name="title" th:value="*{announcement.title}" required>
+        </div>
+
+        <div class="form-group">
+            <label>Existing Images:</label>
+            <div class="row">
+                <div class="col-md-3" th:each="image : ${announcement.images}">
+                    <div class="card mb-2">
+                        <img th:src="@{'/images/' + ${image.id}}" class="card-img-top" alt="Image">
+                        <div class="card-body p-2">
+                            <button type="button" class="btn btn-danger btn-sm btn-block"
+                                    th:onclick="'showDeleteConfirmation(' + ${image.id} + ')'">Delete</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="form-group">
@@ -122,6 +160,35 @@
 </div>
 
 <!-- Include Bootstrap JS and dependencies -->
+<script>
+    let imageIdToDelete = null;
+
+    function showDeleteConfirmation(imageId) {
+        imageIdToDelete = imageId;
+        $('#confirmDeleteImageModal').modal('show');
+    }
+
+    function deleteImage() {
+        const csrfToken = document.querySelector('meta[name="_csrf"]').getAttribute('content');
+        const csrfHeader = document.querySelector('meta[name="_csrf_header"]').getAttribute('content');
+
+        fetch(`/images/${imageIdToDelete}`, {
+            method: 'DELETE',
+            headers: {
+                [csrfHeader]: csrfToken
+            }
+        }).then(response => {
+            $('#confirmDeleteImageModal').modal('hide');
+            if (response.ok) {
+                location.reload();
+            } else {
+                alert('Failed to delete image');
+            }
+        }).catch(error => {
+            alert('Failed to delete image');
+        });
+    }
+</script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
